# meshy

./: build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app-api/: build.gradle
app-core/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: hotspot.html  meshy_priority.ftz
app/src/main/cpp/: CMakeLists.txt  fasttext_jni.cpp
app/src/main/res/drawable/: bubble.xml  bubble_white.xml  ic_launcher_foreground.xml  il_mailbox.xml  il_share_app.xml  navigation_drawer_header.xml  splash_screen.xml  transport_wifi_direct.xml  trust_indicator_unknown.xml  trust_indicator_unverified.xml  trust_indicator_verified.xml
app/src/main/res/drawable-night/: il_mailbox.xml  il_share_app.xml  navigation_drawer_header.xml  splash_screen.xml
app/src/main/res/layout/: activity_change_password.xml  activity_conversation.xml  activity_create_forum.xml  activity_fragment_container_toolbar.xml  activity_image.xml  activity_nav_drawer.xml  activity_rss_feed_manage.xml  activity_settings.xml  activity_sharing_status.xml  activity_test_data.xml  activity_threaded_conversation.xml  author_view.xml  contact_avatar_status.xml  fragment_about.xml  fragment_alias_dialog.xml  fragment_bluetooth_intro.xml  fragment_bluetooth_progress.xml  (+76 more)
app/src/main/res/layout-h650dp/: navigation_header.xml
app/src/main/res/layout-land/: fragment_keyagreement_id.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
messaging-engine-android/: build.gradle
messaging-engine-api/: build.gradle
messaging-engine-core/: build.gradle
(+1270 files in other folders)
